# cppwal

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  architecture_diagram.excalidraw
include/: image_processing.hpp
source/: image_processing.cpp  main.cpp
